# ML-pipeline

./: .dockerignore  .env  DVC.MD  README.md  aap.html  app.py  celery_app.py  database.py  docker-compose.yml  dockerfile  extraction.py  feature_importance.csv  inference.py  init.sql  locust_test.py  main.py  minio_storage.py  model_config.py  model_tuning.py  monitoring.py  monitoring_schedule.py  pipeline_diagram.html  pipeline_diagram.md  prefect.yaml  preprocessing.py  prometheus.yml  pyproject.toml  retrain_flow.py  retrain_flow_utf8.py  test.py  train.py  validate.py
