[project]
name = "ml-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.6.27",
    "evidently",
    "mlflow",
    "pandas",
    "fastapi",
    "uvicorn",
    "boto3",
    "httpx",
    "scikit-learn",
    "pyarrow",
    "imbalanced-learn",
    "optuna",
    "sqlalchemy",
    "psycopg2-binary",
    "xgboost",
    "joblib",
    "python-dotenv",
]
