[project]
name = "ml-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prefect>=3.6.27",
    "evidently==0.4.33",
    "mlflow",
    "pandas",
    "fastapi",
    "uvicorn",
    "boto3",
    "httpx",
    "scikit-learn",
    "pyarrow",
    "imbalanced-learn",
    "optuna",
    "sqlalchemy",
    "psycopg2-binary",
    "xgboost",
    "joblib",
    "python-dotenv",
    "pandera>=0.31.1",
    "shap>=0.51.0",
    "db-dtypes>=1.5.1",
    "locust>=2.43.4",
]
